takie tam poprawki - poczatek przerabiania na nowa wersje

--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,7 @@
+#AuthType Basic
+#AuthName "Restricted"
+#AuthUserFile .htpasswd
+#Require valid-user
+
 RewriteEngine on
 RewriteRule ^(.*)$ public/$1 [L]
